[tool.poetry]
name = "cw-5"
version = "0.1.0"
description = ""
authors = ["Arsenty Dafintsev <aaapython24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
